# flutter_onnxruntime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pubspec.yaml
android/src/main/kotlin/com/masicai/flutteronnxruntime/: FlutterOnnxruntimePlugin.kt
doc/: ohos_porting.md  troubleshooting.md
example/: pubspec.yaml
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/ohos/: build-profile.json5  oh-package.json5
example/ohos/AppScope/: app.json5
example/ohos/AppScope/resources/base/element/: string.json
example/ohos/entry/src/main/ets/entryability/: EntryAbility.ets
example/ohos/entry/src/main/resources/base/element/: string.json
example/ohos/entry/src/main/resources/zh_CN/element/: string.json
hooks/: pre-commit
ios/Classes/: FlutterOnnxruntimePlugin.swift
lib/src/: flutter_onnxruntime_method_channel.dart  flutter_onnxruntime_platform_interface.dart  onnxruntime.dart  ort_value.dart
lib/web/: flutter_onnxruntime_web_plugin.dart
ohos/: index.ets  oh-package.json5
ohos/src/main/: module.json5
ohos/src/main/cpp/: index.d.ets
ohos/src/main/ets/components/plugin/: FlutterOnnxruntimePlugin.ets
scripts/: run_tests_in_local.sh
src/: CMakeLists.txt
src/ohos/: ohos_session_manager.cc  ohos_session_manager.h  ort_ohos_wrapper.cc  ort_ohos_wrapper.h
test/unit/: flutter_onnxruntime_test.dart  ort_session_test.dart  ort_value_session_integration_test.dart  ort_value_test.dart
